@@ -2625,7 +2625,12 @@ command to generate the output files.
   </mime-type>
   <mime-type type="image/jpeg2000">
     <_comment>JPEG-2000 image</_comment>
+    <magic priority="50">
+      <match value="jP" type="string" offset="4" />
+      <match value="\xFF\x4F\xFF\x51\x00" type="string" offset="0" />
+    </magic>
     <glob pattern="*.jp2"/>
+    <glob pattern="*.jpc"/>
   </mime-type>
   <mime-type type="image/x-dds">
     <_comment>DirectDraw surface</_comment>
