@@ -1,3 +1,12 @@
+2007-08-29  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add the JPEG2000 JPC glob to the
+	list, as well as magic for both JP2 and JPC files
+
+	* tests/list:
+	* tests/test.jp2:
+	* tests/test.jpc: Add tests for the above
+
 2007-08-28  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Add application/sdp, with information from
